# api-client

./: .bandit  .codespellrc  .coveragerc  .dockerignore  .editorconfig  .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pydocstyle  .pylintrc  .yamllint.yml  DEPRECATED_DOCKER_README.md  DEPRECATED_README.md  DOCKER.md  Dockerfile  README.md  bandit.yml  build.sh  cSpell.json  conftest.py  mypy.ini  on_bash_start.sh  on_start.sh  pyproject.toml  pyrightconfig.json  pytest.ini  run.sh  run_dev.sh  setup.cfg  setup.py  sourcery.yaml
docker_environment/: .dockerignore  Dockerfile  README.md  build.sh  config.sh  on_bash_start.sh  on_start.sh  remove_build_run.sh  run.sh  run_dev.sh  utils.sh
lib/: .flake8  conftest.py  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py
lib/teselagen/: __init__.py
lib/teselagen/api/: __init__.py  client.py  design_client.py  discover_client.py  evolve_client.py  test_client.py
lib/teselagen/api/tests/: test_client.py  test_design_client.py  test_discover_client.py  test_evolve_client.py  test_multiomics.py  test_test_client.py  test_test_client_multiomics.py
lib/teselagen/api/tests/notebooks/: Hello_World_TEST_module.ipynb
lib/teselagen/examples/: CRISPR Tool.ipynb  Hello_World_TEST_module.ipynb  Multiomics.ipynb  requirements.txt  retrieve_assembly_report.py
lib/teselagen/examples/pytested/: CRISPR Tool.ipynb  CRISPR-Tool.ipynb  Closing the DBTL Cycle.ipynb  Closing-the-DBTL-Cycle.ipynb  Hello-World-TEST-module.ipynb  Hello_World_DESIGN_module.ipynb  design_example.json  test_aa_upload.ipynb
lib/teselagen/utils/: __init__.py  candidates_to_design.py  crispr.py  plot_tools.py  setup_commands.py  test_utils.py  utils.py
teselagen/: __init__.py
teselagen/api/: __init__.py  build_client.py  client.py  design_client.py  discover_client.py  test_client.py
teselagen/api/tests/: test_build_client.py  test_client.py  test_design_client.py  test_discover_client.py  test_multiomics.py  test_test_client.py
teselagen/examples/: .gitignore  Multiomics.ipynb  requirements.txt  retrieve_assembly_report.py  user_requests.py
teselagen/examples/examples_wo_client/: microbial_strain_example.ipynb  microbial_strains.py  notebook.py  sequences.py
teselagen/examples/pytested/: CRISPR-Tool.ipynb  Closing-the-DBTL-Cycle.ipynb  Hello-World-TEST-module.ipynb  Hello_World_BUILD_module.ipynb  Hello_World_DESIGN_module.ipynb
teselagen/utils/: __init__.py  candidates_to_design.py  configuration_helper.py  crispr.py  plot_tools.py  setup_commands.py  test_utils.py  utils.py
teselagen/utils/tests/: test_utils.py
