[tool.poetry]
name = "teselagen"
version = "0.4.4"
description = "Teselagen Biotechnology API client"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = "https://github.com/TeselaGen/api-client"
documentation = ""
keywords = [
    "Synthetic Biology",
    "Teselagen",
    "DBTL",
    "CRISPR",
    "DNA Assembly"
]

packages = [
    {include = "teselagen"},
]

# include = []

exclude = [
    "**/.credentials",
    "**/.test_configuration",
]

[tool.poetry.dependencies]
# general dependencies
python = "^3.9.6"
setuptools = "^58.5.3"
single_version = "^1.5.1"
# test dependencies
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-datadir = "^1.3.1"
pytest-notebook = "^0.6.1"
pytest-xdist = "^2.4.0"
# library dependencies
# dna_features_viewer = "^3.1.0"
dna_features_viewer = "^3.0.3"
fastaparser = "^1.1"
# openpyxl = "^3.0.9"
openpyxl = "^3.0.7"
# pandas = "^1.3.4"
pandas = "^1.1.5"
requests = "^2.26.0"
requests-mock = "^1.9.3"
SecretColors = "^1.2.4"
# tenacity = "^8.0.1"
tenacity = "^8.0.0"
tqdm = "^4.62.3"

# A list of all of the optional dependencies, some of which are included in the
# below `extras`. They can be opted into by apps.

# optionals
#   being used by examples
seaborn = {version = "^0.11.2", optional = true}
jupyter = {version = "^1.0.0", optional = true}
jupyter-console = {version = "^6.4.0", optional = true}
jupyter-contrib-nbextensions = {version = "^0.5.1", optional = true}

[tool.poetry.dev-dependencies]
seaborn = "^0.11.2"
# TODO(diegovalenzuelaiturra): Check if required for testing jupyter notebooks. Check if fixing versions is is still required.
notebook = "^6.4.0"
nglview = "^3.0.3"
nbconvert="5.6.1" # Temporarily pinned for avoiding https://github.com/jupyter/jupyter_client/issues/637
jupyter-client = "6.1.12" # Temporarily pinned for avoiding https://github.com/jupyter/jupyter_client/issues/637
# testing, formaters, fixers, linters, etc.
autoflake = "^1.4"
autopep8 = "^1.6.0"
bandit = "^1.7.0"
cleanpy = "^0.3.1"
cohesion = "^1.0.0"
coverage = "^6.1.2"
docformatter = "^1.4"
fixit = "^0.1.4"
flake8 = "^4.0.1"
flake8-bandit = "^2.1.2"
flake8-broken-line = "^0.4.0"
flake8-bugbear = "^21.9.2"
flake8-commas = "^2.1.0"
flake8-comprehensions = "^3.7.0"
flake8-copyright = "^0.2.2"
flake8-debugger="^4.0.0"
flake8-docstrings = "^1.6.0"
flake8-eradicate = "^1.2.0"
flake8-executable = "^2.1.1"
flake8-implicit-str-concat = "^0.2.0"
flake8-logging-format = "^0.6.0"
flake8-polyfill = "^1.0.2"
flake8-print = "^4.0.0"
flake8-pytest-style = "^1.5.1"
flake8-use-pathlib = "^0.2.1"
isort = "^5.10.1"
mypy = "^0.910"
mypy-extensions = "^0.4.3"
pep8 = "^1.7.1"
pep8-naming = "^0.12.1"
pluggy = "^1.0.0"
pyclean = "^2.0.0"
pycodestyle = "^2.8.0"
pydocstyle = "^6.1.1"
pylint = "^2.11.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-datadir = "^1.3.1"
pytest-testinfra = "^6.4.0"
pytest-xdist = "^2.4.0"
pyupgrade = "^2.29.1"
radon = "^5.1.0"
tryceratops = "^1.0.0"
types-PyYAML = "^6.0.1"
types-requests = "^2.26.0"
types-setuptools = "^57.4.2"
unittest2pytest = "^0.4"
yapf = "^0.31.0"
# others
pre-commit = "^2.15.0"

# pre-commit = {
#     version = "^2.15.0",
#     python = "^3.9",
#     # python = "^3.9.6",
# }

[tool.poetry.extras]
examples = [
    "fastaparser",
    "jupyter_contrib_nbextensions",
    "jupyter-console",
    "jupyter",
    "pandas",
    "seaborn",
    "tqdm",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
